# tyko

./: .babelrc.json  .clang-tidy  .eslintignore  .eslintoutputrc  .eslintrc.yml  .pylintrc  CMakeLists.txt  CPackConfig.cmake  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  alembic.ini  conanfile.py  conanfile.txt  create_config.py  docker-compose.yml  package-lock.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini  tsconfig.json  webpack.config.js
.github/workflows/: audit.yml  sonarqube.yml
CI/build_VS2017/: Dockerfile
CI/build_VS2019/: Dockerfile  deps.py  packages.config
CI/jenkins/: pylintrc
CI/server_testing/: Dockerfile
CI/shared_docker_scripts/: package.bat
CI/testing_javascript/: Dockerfile
alembic/versions/: a6f912f5e00f_make_project_status_a_enumuration.py
avforms/: __init__.py  commands.py  config.py  data_provider.py  entities.py  frontend.py  middleware.py  routes.py  run.py  scheme.py
avforms/templates/: items.html  layout.html  objects.html  projects.html
client/: CMakeLists.txt  CurlPostBehavior.cpp  CurlPostBehavior.h  EditingDialog.qml  ProjectsViewTable.qml  main.qml  postBehavior.h  projectadder.cpp  qml.qrc  qtPostBehavior.cpp  qtPostBehavior.h
database/: av_preservation.sql
deploy/: docker-compose.a.yml  docker-compose.blue.yml  docker-compose.yml
deploy/nginx/: nginx.conf
deploy/tyko/: Dockerfile  gunicorn.conf.py
docs/: api.rst  conf.py  development.rst  index.rst  jsdocs_config.json
tests/: AboutApp.test.js  Common.test.tsx  Files.test.tsx  FormatDetails.test.js  Formats.test.tsx  ItemDetails.test.tsx  Items.test.tsx  ItemsApp.test.tsx  ObjectsDetails.test.tsx  ProjectDetails.test.tsx  Treatment.test.tsx  Vendor.test.tsx  Welcome.test.tsx  api.test.js  conftest.py  editors.test.js  formatDetails.test.js  item_details.test.js  load_format_options.test.js  metadataWidgets.test.js  noteModal.test.js  notes.test.js  setup-jest.js  test_api.py  test_data_provider.py  test_forms.py  test_frontend.py  test_middleware.py  test_pbcore.py  test_routes.py  test_schema.py  test_server.py  test_util.py  tyko.test.js  utils.test.js  widgets.test.js
tests/feature/: api.test.js  database.feature  test_database_feature.py
tyko/: data_provider.py  database.py  decorators.py  entities.py  exceptions.py  frontend.py  middleware.py  pbcore.py  routes.py  run.py  scheme.py  utils.py
tyko/api/: routes.py  views.py
tyko/data_provider/: __init__.py  data_provider.py  formats.py
tyko/pbcore/: __init__.py  pbcore.py
tyko/schema/: avtables.py  formats.py  notes.py  objects.py  projects.py  treatment.py
tyko/site/: __init__.py  routes.py  views.py
tyko/templates/: _macros.html  (+27 more)
utils/: upload_docs.py
(+70 files in other folders)
